fix: changed scrollbar color

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,17 @@
 @import "./sass/app.scss";
 
+html {
+  &::-webkit-scrollbar {
+    background: lighten($background, 10%);
+    width: 9px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $divider;
+    border-radius: 25px;
+  }
+}
+
 body {
   background-color: $background;
 }
@@ -65,7 +77,7 @@ body {
 
 .more {
   grid-area: more;
-  display:none;
+  display: none;
   @media (min-width: 1100px) {
     display: block;
     position: fixed;
@@ -74,10 +86,18 @@ body {
     left: 0px;
     z-index: 1;
     height: calc(100vh - 64px);
-    overflow-y:scroll;
-    overflow-x:hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+      background: $background;
+      width: 9px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: $divider;
+      border-radius: 25px;
+    }
   }
-  
   @media (min-width: 1920px) {
     width: 360px;
     left: calc(50vw - 744px);
